# pizh2322_zvolibovskaya

./: 0202_class.py  README.md
c++/лаб1,1/: README  лаб1,1.sln
c++/лаб1,1/лаб1,1/: лаб1,1.cpp  лаб1,1.vcxproj  лаб1,1.vcxproj.filters
c++/лаб1,1/лаб1,1/x64/Debug/: vc143.idb  лаб1,1.exe.recipe  лаб1,1.ilk
c++/лаб1,1/лаб1,1/x64/Debug/лаб1,1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  лаб1,1.lastbuildstate
c++/лаб2/: README.md  лаб2.sln
c++/лаб2/лаб2/: лаб2.cpp  лаб2.vcxproj  лаб2.vcxproj.filters
c++/лаб2/лаб2/x64/Debug/: vc143.idb  лаб2.exe.recipe  лаб2.ilk
cpp/: README.md
cpp/labwork1/: README.md  main.cpp
cpp/labwork2/: README.md
cpp/labwork3/: CMakeLists.txt  README.md  Sand.cpp  Sand.h  init.txt  main.cpp
cpp/labwork5/: README.md
cpp/labwork6/: CMakeLists.txt
cpp/labwork6/example/: config.omfl
cpp/labwork6/lib/: parser.cpp  parser.h
cpp/labwork7/: README.md
cpp/labwork8/: CMakeLists.txt  README.md
cpp/labwork8/lib/: CMakeLists.txt  bst.hpp  container.hpp  iterator.hpp
cpp/labwork8/tests/: CMakeLists.txt  tests.cpp
cpp/labwork9/: CMakeLists.txt  README.md
week03/: README.md
week03/Decorator/: README.md  main.py
week03/Decorator_for_class/: README.md  main.py
week03/Generator/: README.md  main.py
week03/Lambda/: README.md  main.py
week03/oop_lr01_task_04_03_01/: README.md  roman.py
week04/: README.md  main.py
week05/oop_lr01_task_04_03_06/: README.md  main.py  transport.py
(+9 files in other folders)
